[WO-90] fix text input overflow in to field

--- a/src/sass/views/_write.scss
+++ b/src/sass/views/_write.scss
@@ -26,6 +26,7 @@
 
         input {
             margin-left: 0.3em;
+            width: 80%;
         }
     }
 
